--- a/style/style.css
+++ b/style/style.css
@@ -319,6 +319,11 @@ body {
   font-size: 20px;
   line-height: 32px;
 }
+p {
+  color: #fff;
+  font-size: 30px;
+  text-align: center;
+}
 
 @media (max-width: 1080px) {
   .content-title {
