refactor: edit style

--- a/style/style.css
+++ b/style/style.css
@@ -319,7 +319,7 @@ body {
   font-size: 20px;
   line-height: 32px;
 }
-p {
+.portfolio p {
   color: #fff;
   font-size: 30px;
   text-align: center;
