--- a/style/style.scss
+++ b/style/style.scss
@@ -1,55 +1,82 @@
 /******************** reset ********************/
 
-*, *:before , *:after {box-sizing: border-box;}
-ul {padding: 0;}  
-h1 {margin: 0; padding: 0; border: 0;}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+ul {
+  padding: 0;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
 
 /******************** base ********************/
 
 body {
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
 .all-wrapper {
   max-width: 1280px;
   min-width: 700px;
   margin: 0 auto;
   background-color: #f2f9fb;
 }
+
 .wrapper {
   display: flex;
 }
+
 .left-block {
   display: flex;
   flex-wrap: nowrap;
   width: 41.35%;
 }
-.right-block {  
+
+.right-block {
   flex-wrap: nowrap;
   width: 58.65%;
   padding: 1vh 5% 1vh 5%;
 }
+
 .left-block-strip {
   width: 80%;
   margin: 0 0 0 20%;
 }
+
 .left-block-strip__header {
   background-color: #212530;
 }
+
 .left-block-strip__content {
   background-color: #e7e8e9;
   padding: 1vh 12% 1vh 12%;
 }
+
 .expiriens-wrapper {
   display: flex;
 }
+
 .expiriens-left-block {
   flex-wrap: nowrap;
   width: 30%;
 }
+
 .expiriens-right-block {
   flex-wrap: nowrap;
-  width: 70%;  
+  width: 70%;
 }
+
 .footer-wrapper {
   display: flex;
   flex-wrap: nowrap;
@@ -64,53 +91,65 @@ body {
   background-color: #171b26;
   color: #fff;
 }
+
 .header-img {
   max-width: 100%;
   margin: 12vh 0 0 0;
 }
+
 .header-menu-list {
   display: flex;
   justify-content: space-between;
 }
+
 .header-menu-item {
   list-style-type: none;
 }
+
 .header-menu-link {
   color: #fff;
 }
+
 .header-menu-link:hover {
   color: #aaa;
   text-decoration: none;
 }
+
 .header-title {
   font-weight: 700;
   font-size: 72px;
   line-height: 84px;
   margin: 8vh 0 0 0;
 }
+
 .header-description {
   font-weight: 500;
   font-size: 36px;
   line-height: 84px;
 }
+
 .header-contacts {
   margin: 6vh 0 0 0;
 }
+
 .header-contacts-list {
   display: flex;
   max-width: 100%;
   flex-wrap: wrap;
 }
+
 .header-contacts-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 0px;
 }
+
 .header-contacts-item {
   list-style-type: none;
   margin: 0 0 4vh 0;
   width: 50%;
 }
+
 .header-contacts-link {
   color: #aaa;
   text-decoration: none;
@@ -118,18 +157,47 @@ body {
   font-size: 20px;
   line-height: 30px;
 }
+
 @media (max-width: 1080px) {
-  .header-contacts-link {font-size: 17px;}
-  .header-title {font-size: 65px;}
-  .header-description {font-size: 30px;}
+  .header-contacts-link {
+    font-size: 17px;
+  }
+
+  .header-title {
+    font-size: 65px;
+  }
+
+  .header-description {
+    font-size: 30px;
+  }
 }
+
 @media (max-width: 850px) {
-  .header-contacts-link {font-size: 15px;}
-  .header-title {font-size: 55px; line-height: 66px;}
-  .header-description {font-size: 27px;}
-  .header-contacts {margin: 3vh 0 0 0;}
-  .header-contacts-title {font-weight: 600; font-size: 17px;}
-  .header-contacts-item {margin: 0 0 2vh 0;}
+  .header-contacts-link {
+    font-size: 15px;
+  }
+
+  .header-title {
+    font-size: 55px;
+    line-height: 66px;
+  }
+
+  .header-description {
+    font-size: 27px;
+  }
+
+  .header-contacts {
+    margin: 3vh 0 0 0;
+  }
+
+  .header-contacts-title {
+    font-weight: 600;
+    font-size: 17px;
+  }
+
+  .header-contacts-item {
+    margin: 0 0 2vh 0;
+  }
 }
 
 /******************** main content ********************/
@@ -137,6 +205,7 @@ body {
 .content {
   color: #555;
 }
+
 .content-title {
   color: #161b25;
   font-weight: 700;
@@ -144,6 +213,7 @@ body {
   line-height: 80px;
   letter-spacing: 6px;
 }
+
 .content-education-item {
   list-style-type: none;
   font-weight: 400;
@@ -151,16 +221,19 @@ body {
   line-height: 32px;
   margin: 0 0 2vh 0;
 }
+
 .content-hobbies-list {
   list-style-type: none;
   margin: 0 0 0 30px;
 }
+
 .content-hobbies-item {
   font-weight: 500;
   font-size: 20px;
   margin: 0 0 2vh 0;
   position: relative;
 }
+
 .content-hobbies-item:before {
   content: '';
   position: absolute;
@@ -178,34 +251,41 @@ body {
   font-size: 18px;
   line-height: 32px;
 }
+
 .content-expiriens-company {
   font-weight: 400;
   font-size: 18px;
   line-height: 32px;
 }
+
 .content-expiriens-profession {
   font-weight: 600;
   font-size: 20px;
   line-height: 32px;
 }
+
 .content-expiriens-tasks {
   font-weight: 300;
   font-size: 20px;
   line-height: 32px;
 }
+
 .content-expiriens-item {
   list-style-type: none;
   margin: 0 0 2vh 0;
 }
+
 .content-skills-list {
   display: flex;
   flex-wrap: wrap;
 }
+
 .content-skills-item {
   list-style-type: none;
   width: 50%;
   margin: 0 0 2vh 0;
 }
+
 .content-skills-item span {
   font-weight: 400;
   font-size: 20px;
@@ -220,29 +300,79 @@ body {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
 .content-english-description {
   margin: 0 0 3vh 0;
   font-weight: 300;
   font-size: 20px;
   line-height: 32px;
 }
+
 @media (max-width: 1080px) {
-  .content-title {font-size: 34px;}
-  .content-expiriens-tasks {font-size: 16px; line-height: 28px;}
-  .content-education-item {font-size: 16px; line-height: 28px;}
-  .content-english-description {font-size: 16px; line-height: 28px;}
-  .content-hobbies-item {font-size: 16px; line-height: 28px;}
+  .content-title {
+    font-size: 34px;
+  }
+
+  .content-expiriens-tasks {
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  .content-education-item {
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  .content-english-description {
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  .content-hobbies-item {
+    font-size: 16px;
+    line-height: 28px;
+  }
 }
+
 @media (max-width: 850px) {
-  .content-title {font-size: 27px;}
-  .content-expiriens-date {font-size: 16px;}
-  .content-education-date {font-size: 16px;}
-  .content-skills-item span {font-size: 17px;}
-  .content-expiriens-company {font-size: 13px; line-height: 22px;}
-  .content-education-title {font-size: 16px; }
-  .content-education-place {font-size: 16px;}
-  .content-expiriens-profession {font-weight: 500; font-size: 18px; line-height: 25px;}
-  .content-hobbies-item:before {top: 3px;}
+  .content-title {
+    font-size: 27px;
+  }
+
+  .content-expiriens-date {
+    font-size: 16px;
+  }
+
+  .content-education-date {
+    font-size: 16px;
+  }
+
+  .content-skills-item span {
+    font-size: 17px;
+  }
+
+  .content-expiriens-company {
+    font-size: 13px;
+    line-height: 22px;
+  }
+
+  .content-education-title {
+    font-size: 16px;
+  }
+
+  .content-education-place {
+    font-size: 16px;
+  }
+
+  .content-expiriens-profession {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
+  }
+
+  .content-hobbies-item:before {
+    top: 3px;
+  }
 }
 
 /******************** portfolio ********************/
@@ -251,6 +381,7 @@ body {
   background-color: #171b26;
   padding: 2vh 5% 1vh 5%;
 }
+
 .portfolio-title {
   color: #fff;
   font-weight: 500;
@@ -259,18 +390,31 @@ body {
   letter-spacing: 6px;
   text-align: center;
 }
+
 .portfolio-list {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
 .portfolio-item {
   list-style-type: none;
   width: 40%;
   margin: 0 0 3vh 0;
 }
+
 .portfolio-img {
   width: 100%;
+}
+.portfolio p {
+  color: #fff;
+  font-size: 30px;
+  text-align: center;
+}
+
+.portfolio-description {
+  color: #888;
+  padding: 10px 0 0 0;
 }
 
 
@@ -283,19 +427,25 @@ body {
   color: #fff;
   padding: 1vh 5%;
 }
+
 .footer-github-link {
-  color: #fff;  
+  color: #fff;
   font-weight: 300;
   font-size: 20px;
   line-height: 30px;
 }
+
 .footer-github-link:hover {
   text-decoration: none;
 }
+
 .footer-rsschool-img {
   width: 100px;
   height: 50px;
 }
+
 @media (max-width: 850px) {
-  .footer-github-link {font-size: 17px;}
+  .footer-github-link {
+    font-size: 17px;
+  }
 }
