--- a/style/style.scss
+++ b/style/style.scss
@@ -28,7 +28,7 @@ body {
 
 .all-wrapper {
   max-width: 1280px;
-  min-width: 700px;
+  min-width: 320px;
   margin: 0 auto;
   background-color: #f2f9fb;
 }
@@ -85,6 +85,24 @@ body {
   align-items: center;
 }
 
+@media (max-width: 1279px) {}
+
+@media (max-width: 767px) {
+  .wrapper {
+    flex-wrap: wrap;
+  }
+
+  .left-block {
+    width: 100%;
+  }
+
+  .right-block {
+    width: 100%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 500px) {}
+
 /******************** header ********************/
 
 .header {
@@ -95,6 +113,10 @@ body {
 .header-img {
   max-width: 100%;
   margin: 12vh 0 0 0;
+}
+
+.photo-block {
+  display: none;
 }
 
 .header-menu-list {
@@ -158,6 +180,8 @@ body {
   line-height: 30px;
 }
 
+@media (max-width: 1279px) {}
+
 @media (max-width: 1080px) {
   .header-contacts-link {
     font-size: 17px;
@@ -199,6 +223,48 @@ body {
     margin: 0 0 2vh 0;
   }
 }
+
+
+@media (max-width: 767px) {
+  .header {
+    padding: 20px 0 0 0;
+  }
+
+  .header-wrapper {
+    display: flex;
+  }
+
+  .photo-block {
+    display: block;
+  }
+
+  .header-img-mini {
+    width: 80%;
+    max-width: 320px;
+    margin: 0 0 0 0;
+  }
+
+  .header .left-block {
+    display: none;
+  }
+
+  .header-menu-list {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .header-menu-item {
+    margin: 7px 0;
+  }
+
+  .header-title {
+    margin: 2vh 0 0 0;
+    line-height: 55px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 500px) {}
 
 /******************** main content ********************/
 
@@ -375,6 +441,22 @@ body {
   }
 }
 
+@media (max-width: 767px) {
+
+  .left-block {
+    order: 2;
+  }
+
+  .left-block-strip {
+    width: 100%;
+    margin: 0;
+  }
+
+  .content-hobbies-item {
+    margin: 0;
+  }
+}
+
 /******************** portfolio ********************/
 
 .portfolio {
@@ -406,6 +488,7 @@ body {
 .portfolio-img {
   width: 100%;
 }
+
 .portfolio p {
   color: #fff;
   font-size: 30px;
@@ -417,6 +500,19 @@ body {
   padding: 10px 0 0 0;
 }
 
+@media (max-width: 1279px) {}
+
+@media (max-width: 767px) {
+  .portfolio-item {
+    width: 80%;
+  }
+
+  .portfolio-title {
+    line-height: 55px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 500px) {}
 
 
 /******************** footer ********************/
@@ -448,4 +544,35 @@ body {
   .footer-github-link {
     font-size: 17px;
   }
+}
+
+/******************** back-to-top ********************/
+
+.back-to-top {
+  position: fixed;
+  bottom: -60px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  background-color: #f2f9fb;
+  // border-radius: 50%;
+  cursor: pointer;
+  transition: 0.4s linear;
+  border: 2px solid #171b26;
+  padding-top: 18px;
+}
+.back-to-top:hover {
+  background-color: #8b8d9b;
+}
+.back-to-top.active {
+  bottom: 10px;
+}
+.arrow {
+  width: 20px;
+  height: 20px;
+  border-top: 3px solid #171b26;
+  border-right: 3px solid #171b26;
+  margin: 0 auto;
+  text-align: center;
+  transform: rotate(-45deg);
 }
