feat: add certificates

--- a/style/style.css
+++ b/style/style.css
@@ -136,10 +136,14 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .header-menu-item {
   list-style-type: none;
+  width: 25%;
+  margin: 0 0 10px 0;
 }
 
 .header-menu-link {
@@ -467,7 +471,7 @@ body {
 /******************** portfolio ********************/
 .portfolio {
   background-color: #171b26;
-  padding: 2vh 5% 2vh 5%;
+  padding: 2vh 5% 7vh 5%;
 }
 
 .portfolio-button {
@@ -841,6 +845,59 @@ strong {
   border-right: 3px solid #888;
   -webkit-transform: rotate(135deg);
           transform: rotate(135deg);
+}
+
+/******************** testwork ********************/
+.testwork-title {
+  color: #161b25;
+  font-weight: 700;
+  font-size: 43px;
+  line-height: 80px;
+  letter-spacing: 6px;
+  text-align: center;
+}
+
+.testwork-link {
+  font-weight: 400;
+  font-size: 18px;
+  color: #555;
+}
+
+.testwork-link:hover {
+  color: #aaa;
+  text-decoration: none;
+}
+
+/******************** certificate ********************/
+.certificate {
+  background-color: #171b26;
+  padding: 2vh 5% 7vh 5%;
+}
+
+.certificate-item {
+  list-style-type: none;
+  width: 30%;
+  margin: 0 0 3vh 0;
+}
+
+.certificate-description {
+  color: #888;
+  padding: 10px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.certificate-link {
+  color: #aaa;
+}
+
+.certificate-link:hover {
+  color: #aaa;
+  text-decoration: none;
 }
 
 /******************** arrow-down button ********************/
