--- a/style/style.scss
+++ b/style/style.scss
@@ -127,10 +127,13 @@ body {
 .header-menu-list {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .header-menu-item {
   list-style-type: none;
+  width: 25%;
+  margin: 0 0 10px 0;
 }
 
 .header-menu-link {
@@ -477,7 +480,7 @@ body {
 
 .portfolio {
   background-color: #171b26;
-  padding: 2vh 5% 2vh 5%;
+  padding: 2vh 5% 7vh 5%;
 }
 
 .portfolio-button {
@@ -856,6 +859,55 @@ strong {
   border-top: 3px solid #888;
   border-right: 3px solid #888;
   transform: rotate(135deg);
+}
+
+/******************** testwork ********************/
+
+.testwork-title {
+  color: #161b25;
+  font-weight: 700;
+  font-size: 43px;
+  line-height: 80px;
+  letter-spacing: 6px;
+  text-align: center;
+}
+
+.testwork-link {
+  font-weight: 400;
+  font-size: 18px;
+  color: #555;
+}
+
+.testwork-link:hover {
+  color: #aaa;
+  text-decoration: none;
+}
+
+/******************** certificate ********************/
+
+.certificate {
+  background-color: #171b26;
+  padding: 2vh 5% 7vh 5%;
+}
+.certificate-item {
+  list-style-type: none;
+  width: 30%;
+  margin: 0 0 3vh 0;
+}
+.certificate-description {
+  color: #888;
+  padding: 10px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.certificate-link {
+  color: #aaa;
+}
+
+.certificate-link:hover {
+  color: #aaa;
+  text-decoration: none;
 }
 
 /******************** arrow-down button ********************/
