--- a/style/style.css
+++ b/style/style.css
@@ -871,7 +871,16 @@ strong {
 /******************** certificate ********************/
 .certificate {
   background-color: #171b26;
-  padding: 2vh 5% 7vh 5%;
+  padding: 2vh 5% 3vh 5%;
+}
+
+.certificate-title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 43px;
+  line-height: 55px;
+  letter-spacing: 6px;
+  text-align: center;
 }
 
 .certificate-item {
@@ -898,6 +907,21 @@ strong {
 .certificate-link:hover {
   color: #aaa;
   text-decoration: none;
+}
+
+@media (max-width: 650px) {
+  .certificate-item {
+    width: 40%;
+  }
+}
+
+@media (max-width: 400px) {
+  .certificate-item {
+    font-size: 12px;
+  }
+  .certificate-title {
+    font-size: 37px;
+  }
 }
 
 /******************** arrow-down button ********************/
