--- a/style/style.scss
+++ b/style/style.scss
@@ -276,6 +276,7 @@ body {
   .header-menu-item {
     width: auto;
     margin: 7px 0;
+    text-align: right;
   }
 
   .header-title {
@@ -285,6 +286,35 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 500px) {}
+
+/******************** change nav header ********************/
+
+.header-menu.sticky-header {
+  background-color: #212530;
+  position: sticky;
+  top: 0;
+  display: block;
+}
+.sticky-header .header-menu-list {
+  justify-content: space-evenly;
+  padding: 20px 0;
+  margin: 0;
+}
+.sticky-header .header-menu-item {
+  width: auto;
+}
+.header-menu {
+  display: none;
+}
+
+@media (max-width: 960px) {
+  .header-menu.sticky-header {
+    display: none;
+  }
+  .header-menu {
+    display: block;
+  }
+}
 
 /******************** main content ********************/
 
