feat: add box-shadow at test-work

--- a/style/style.scss
+++ b/style/style.scss
@@ -569,6 +569,8 @@ body {
 
 .portfolio-img {
   width: 100%;
+  // border: 1px solid #888;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .portfolio p {
