feat: add box-shadow at resume

--- a/style/style.css
+++ b/style/style.css
@@ -570,6 +570,8 @@ body {
 
 .portfolio-img {
   width: 100%;
+  -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .portfolio p {
@@ -669,6 +671,8 @@ body {
   width: 100%;
   margin: 0 auto;
   padding: 10%;
+  -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .b-resume-wrapper {
