--- a/style/style.scss
+++ b/style/style.scss
@@ -683,6 +683,7 @@ body {
   width: 100%;
   margin: 0 auto;
   padding: 10%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .b-resume-wrapper {
