--- a/style/style.scss
+++ b/style/style.scss
@@ -187,6 +187,9 @@ body {
   font-size: 20px;
   line-height: 30px;
 }
+.header-contacts-link:hover {
+  color: #fff;
+}
 
 @media (max-width: 1279px) {}
 
