--- a/style/style.css
+++ b/style/style.css
@@ -462,11 +462,12 @@ body {
 
 .portfolio-nda {
   width: 100%;
-  height: 150px;
+  height: 135px;
   margin: 0 auto;
   background-color: #ff8043;
   font-family: "Caveat", cursive;
   padding: 20px;
+  border-radius: 5px;
 }
 
 .portfolio-nda-wrapper {
