--- a/style/style.css
+++ b/style/style.css
@@ -543,7 +543,6 @@ body {
 
 .portfolio-img {
   width: 100%;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .portfolio p {
@@ -565,6 +564,14 @@ body {
     line-height: 55px;
   }
 }
+
+/******************** test ********************/
+
+.portfolio-test-img {
+  width: 100%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
 /******************** footer ********************/
 .footer {
   background-color: #171b26;
