feat: add description for work

--- a/style/style.scss
+++ b/style/style.scss
@@ -549,6 +549,15 @@ body {
   line-height: 0px;
 }
 
+.portfolio-nda-title {
+  color: #fff;
+}
+
+.portfolio-nda-list {
+  margin-top: 30px;
+  list-style-type: none;
+}
+
 .portfolio-button {
   background-color: transparent;
   cursor: pointer;
