--- a/style/style.css
+++ b/style/style.css
@@ -462,12 +462,11 @@ body {
 
 .portfolio-nda {
   width: 100%;
-  height: 135px;
+  height: 150px;
   margin: 0 auto;
   background-color: #ff8043;
   font-family: "Caveat", cursive;
   padding: 20px;
-  border-radius: 5px;
 }
 
 .portfolio-nda-wrapper {
@@ -486,6 +485,15 @@ body {
 .portfolio-nda-text {
   color: #fff;
   line-height: 0px;
+}
+
+.portfolio-nda-title {
+  color: #fff;
+}
+
+.portfolio-nda-list {
+  margin-top: 30px;
+  list-style-type: none;
 }
 
 .portfolio-button {
@@ -543,6 +551,7 @@ body {
 
 .portfolio-img {
   width: 100%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .portfolio p {
@@ -564,14 +573,6 @@ body {
     line-height: 55px;
   }
 }
-
-/******************** test ********************/
-
-.portfolio-test-img {
-  width: 100%;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
 /******************** footer ********************/
 .footer {
   background-color: #171b26;
