--- a/style/style.scss
+++ b/style/style.scss
@@ -613,8 +613,6 @@ body {
 
 .portfolio-img {
   width: 100%;
-  // border: 1px solid #888;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .portfolio p {
@@ -641,6 +639,13 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 500px) {}
+
+/******************** text ********************/
+
+.portfolio-test-img {
+  width: 100%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
 
 
 /******************** footer ********************/
